# Txtcode

./: .gitignore  404.html  BUILD_INSTRUCTIONS.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  NON-GOALS.md  PROJECT_SUMMARY.md  README.md  build-testzone.sh  clean-testzone.sh  clippy.toml  index.html  install.sh  mkdocs.yml  sitemap.xml  uninstall.sh
.cargo/: audit.toml
.github/workflows/: bench.yml  ci.yml  docker.yml  docs.yml  playground.yml  release.yml  security.yml
async/: index.html
benches/: baseline.json  benchmarks.rs
benches/programs/: array_ops.txt  fib.txt  fib_ast.txt  gc_alloc.txt  json_ops.txt  loop.txt  string_concat.txt
contributing/: index.html
cpp/: .gitignore  BUILD.md  CMakeLists.txt  FIXES_APPLIED.md  README.md  REVIEW_SUMMARY.md  STATUS.md  build.sh  clean.sh  install.sh
cpp/include/txtcode/cli/: main.h
cpp/include/txtcode/compiler/: bytecode.h  codegen.h  optimizer.h
cpp/include/txtcode/lexer/: keywords.h  lexer.h  token.h
cpp/include/txtcode/parser/: ast.h  parser.h
cpp/include/txtcode/runtime/: bytecode_vm.h  gc.h  memory.h  vm.h
cpp/include/txtcode/security/: encryptor.h  obfuscator.h
cpp/include/txtcode/stdlib/: core.h  crypto.h  io.h
cpp/include/txtcode/typecheck/: checker.h  types.h
cpp/src/cli/: compile.cpp  main.cpp  repl.cpp  run.cpp
cpp/src/compiler/: bytecode.cpp  codegen.cpp  optimizer.cpp
cpp/src/lexer/: keywords.cpp  lexer.cpp  token.cpp
cpp/src/parser/: ast.cpp  parser.cpp
cpp/src/runtime/: bytecode_vm.cpp  gc.cpp  memory.cpp  vm.cpp
cpp/src/security/: encryptor.cpp  obfuscator.cpp
cpp/src/stdlib/: core.cpp  crypto.cpp  io.cpp
cpp/src/typecheck/: checker.cpp  types.cpp
crates/plugin-sdk/: Cargo.toml  README.md
crates/plugin-sdk/src/: lib.rs
dev-history/: index.html
dev-plan/: index.html
docs/: async-await-design.md  async.md  contributing.md  deferred.md  dev-history.md  dev-plan.md  grammar.ebnf  index.md  language-spec.md  llvm-backend.md  performance.md  permissions.md  quick-start.md  roadmap.md  security-features.md  stability.md  syntax-reference.md  v0.2-overview.md
docs/archive/: README.md  gap-analysis-pre-v0.2.md
editors/: README.md  package.json  txtcode-language-configuration.json  txtcode.tmLanguage.json
editors/client/: extension.js
editors/snippets/: txtcode.json
examples/: README.md  audit_trail.tc  calculator.tc  calculator.txt  config_parser.tc  config_validator.tc  directory_summary.tc  file_processing.tc  file_processor.tc  file_processor.txt  hello.tc  hello.txt  hello_world.tc  log_analyzer.tc  math_utils.tc  metrics_report.tc  package_usage.tc  pipeline.tc  policy_exec.tc  port_scanner.txt  security_demo.tc  security_demo.txt  web_server.tc  web_server.txt
examples/experimental/: README.md  config_parser.tc  module_import.tc  package_usage.tc  policy_exec.tc  port_scanner.tc  task_automation.tc  web_server.tc
examples/plugins/hello/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_bytecode.rs  fuzz_env_file.rs  fuzz_lexer.rs  fuzz_parser.rs  fuzz_zip.rs
language-spec/: index.html
llvm-backend/: index.html
memory/: MEMORY.md
performance/: index.html
permissions/: index.html
pkg/: install.sh
playground/: app.js  index.html
quick-start/: index.html
registry/: index.json
scripts/: backup.sh  sign_release.sh
search/: search_index.json
security-features/: index.html
src/: config.rs  lib.rs
src/builder/: mod.rs  project.rs
src/capability/: ble.rs  filesystem.rs  manager.rs  mod.rs  net.rs  wifi.rs
src/cli/: bench.rs  check.rs  compile.rs  debug.rs  doc.rs  doctor.rs  env.rs  format.rs  init.rs  lint.rs  lsp.rs  migrate.rs  mod.rs  package.rs  repl.rs  run.rs  self_manage.rs  test_cmd.rs
src/compiler/: bytecode.rs  codegen.rs  mod.rs  optimizer.rs  wasm.rs  wasm_binary.rs
src/embed/: mod.rs
src/ir/: builder.rs  instruction.rs  mod.rs  program.rs
src/lexer/: keywords.rs  lexer.rs  mod.rs  token.rs
src/parser/: ast.rs  grammar.md  grammar.rs  mod.rs  parser.rs  patterns.rs  utils.rs
src/parser/ast/: capabilities.rs  common.rs  expressions.rs  mod.rs  statements.rs  time.rs
src/parser/core/: mod.rs  traits.rs
src/parser/expressions/: calls.rs  mod.rs  operators.rs  primary.rs
src/parser/statements/: assignment.rs  (+6 more)
src/policy/: engine.rs  mod.rs  rate_limit.rs  scope.rs  timeout.rs
src/runtime/: async_executor.rs  audit.rs  bytecode_runner.rs  bytecode_vm.rs  capabilities.rs  compatibility.rs  errors.rs  event_loop.rs  gc.rs  intent.rs  memory.rs  migration.rs  mod.rs  module.rs  module_metadata.rs  permission_map.rs  permissions.rs  policy.rs  sandbox.rs  security.rs  security_pipeline.rs  vm.rs  vm_expression_impl.txt
src/security/: auth.rs  encryptor.rs  integrity.rs  mod.rs  obfuscator.rs  protector.rs  update_verifier.rs
src/stdlib/: bytes.rs  capabilities.rs  core.rs  crypto.rs  db.rs  errors.rs  ffi.rs  function_executor.rs  io.rs  json.rs  log.rs  mod.rs  net.rs  path.rs  permission_checker.rs  plugin.rs  regex.rs  sys.rs  template.rs  test.rs  time.rs  tools.rs  url.rs  vm_permission_extractor.rs  wasm_exec.rs
src/tools/: ast_printer.rs  debugger.rs  docgen.rs  formatter.rs  linter.rs  logger.rs  mod.rs
src/typecheck/: checker.rs  inference.rs  mod.rs  types.rs
src/validator/: mod.rs  restrictions.rs  semantics.rs  syntax.rs
stability/: index.html
syntax-reference/: index.html
tests/: lib.rs
tests/integration/: mod.rs  test_async.rs  test_bytecode.rs  test_control_flow.rs  test_embed.rs  test_functions.rs  test_golden.rs  test_grammar.rs  test_patterns.rs  test_permissions.rs  test_runtime.rs  test_security.rs  test_stdlib_core.rs  test_stdlib_db.rs  test_stdlib_io.rs  test_stdlib_net.rs  test_tc_files.rs  test_types.rs  test_validators.rs
tests/tc/: test_arithmetic.tc  test_collections.tc  test_functions.tc  test_strings.tc
tests/unit/: mod.rs  test_debugger.rs  test_docgen.rs  test_ir.rs  test_lexer.rs  test_lsp.rs  test_obfuscator.rs  test_parser.rs  test_typecheck.rs  test_wasm_binary.rs
testzone/: hello.tc  test_program.tc
(+44 files in other folders)
