[package]
name = "txtcode"
version = "0.4.0"
edition = "2021"
authors = ["MD POOR"]
description = "Txt-code: A simple, memorable, security-focused programming language"
license = "MIT"
repository = "https://github.com/iga2x/txtcode"

[dependencies]
# Parser
nom = "7.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization (for bytecode, AST)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Cryptography (for security features)
aes-gcm = "0.10"
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"
ring = "0.17"
hex = "0.4"
base64 = "0.21"

# Math
libm = "0.2"

# Networking (for stdlib)
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
hyper = { version = "1.0", features = ["full"] }

# File I/O
walkdir = "2.4"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# REPL
rustyline = "14.0"

# Lazy static
lazy_static = "1.4"

# Directory utilities (for ~/.txtcode/ paths)
dirs = "5.0"

# Date/time utilities (for logging)
chrono = "0.4"

# Regular expressions
regex = "1.10"

# Semantic versioning
semver = "1.0"

# Archive / serialization formats (always included)
zip = "2.1"
quick-xml = "0.31"
serde_yaml = "0.9"

# Safe temporary file creation (prevents TOCTOU races in temp_file())
tempfile = "3"

# Password hashing
bcrypt = "0.15"

# RSA cryptography
rsa = { version = "0.9", features = ["sha2"] }

# System calls (Unix)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
# Real feature flags (Phase 3 — replaces legacy no-op flags)
default = ["stdlib-full", "net"]
stdlib-full = []           # zip, quick-xml, serde_yaml (currently always included)
net = []                   # HTTP/TCP networking (currently always included)
bytecode = []              # Bytecode VM (experimental; bincode always present for now)
async = []                 # Async runtime (placeholder; tokio currently always linked)
crypto-advanced = []       # RSA + bcrypt (currently always included)
pentest = []               # WiFi/BLE capabilities (requires explicit opt-in)

# Legacy feature names — kept to avoid breaking external build scripts.
# They are now aliases for features that no longer gate their named dependency.
zip-support = []
xml-support = []
yaml-support = []
full-stdlib = ["stdlib-full"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "txtcode"
path = "src/lib.rs"

