[workspace]
members = [
    ".",
    "crates/plugin-sdk",
]

[package]
name = "txtcode"
version = "3.0.0"
edition = "2021"
authors = ["MD POOR"]
description = "Txt-code: A simple, memorable, security-focused programming language"
license = "MIT"
repository = "https://github.com/iga2x/txtcode"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Bytecode serialization
bincode = "1.3"

# Cryptography (core — always included)
aes-gcm = "0.10"
sha2 = "0.10"
md5 = "0.7"
rand = "0.8"
ring = "0.17"
hex = "0.4"
base64 = "0.21"

# Advanced cryptography — password hashing + RSA (opt-in)
bcrypt = { version = "0.15", optional = true }
rsa   = { version = "0.9", features = ["sha2"], optional = true }

# Networking — HTTP client + async TCP/UDP (opt-in)
tokio   = { version = "1.0", features = ["rt", "rt-multi-thread", "net"], optional = true }
reqwest    = { version = "0.11", features = ["json", "blocking", "rustls-tls"], default-features = false, optional = true }
native-tls      = { version = "0.2", optional = true }
tungstenite     = { version = "0.29", features = ["native-tls"], optional = true }
jsonwebtoken    = { version = "10", default-features = false, features = ["rust_crypto"] }
rusqlite        = { version = "0.33", features = ["bundled"], optional = true }
postgres        = { version = "0.19", optional = true }
mysql           = { version = "24", optional = true }

# File I/O — archive + structured formats (opt-in)
zip       = { version = "2.1", optional = true }
quick-xml = { version = "0.31", optional = true }
serde_yaml = { version = "0.9", optional = true }

# Safe temporary file creation (prevents TOCTOU races in temp_file())
tempfile = "3"

# Pure-Rust tarball extraction (replaces system `tar` subprocess)
flate2 = "1.0"
tar    = { version = "0.4", package = "tar" }

# CLI
clap    = { version = "4.4", features = ["derive"] }
colored = "2.1"

# REPL
rustyline = "14.0"

# Insertion-ordered map (deterministic iteration for Value::Map)
indexmap = { version = "2", features = ["serde"] }

# Utilities (always needed)
lazy_static = "1.4"
chrono      = "0.4"
regex       = "1.10"
semver      = "1.0"

# Directory utilities
dirs = "5.0"

# FFI — dynamic library loading (opt-in; requires unsafe native code)
libloading = { version = "0.8", optional = true }
wasm-encoder = { version = "0.219", optional = true }
wasmparser   = { version = "0.219", optional = true }
wasmtime     = { version = "29", optional = true, default-features = false, features = ["cranelift", "runtime"] }
stacker = "0.1"

# System calls (Unix only)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

# ── Feature flags ────────────────────────────────────────────────────────────
#
# default       = stdlib-full + net  (same as before, no breakage)
# net           = HTTP / TCP / UDP / DNS stdlib functions
# stdlib-full   = zip / XML / YAML stdlib functions
# crypto-advanced = bcrypt + RSA stdlib functions
# ai-metadata   = AI-aware execution context (experimental, off by default)
#
# cargo build                          → default: stdlib-full + net
# cargo build --no-default-features    → core only (no stdlib-full, net, db)
# cargo build --features crypto-advanced → add bcrypt + RSA
# cargo build --features ai-metadata   → add AI execution context
[features]
default = ["stdlib-full", "net", "db"]
stdlib-full     = ["dep:zip", "dep:quick-xml", "dep:serde_yaml"]
db              = ["dep:rusqlite"]
postgres        = ["dep:postgres"]
mysql           = ["dep:mysql"]
net             = ["dep:tokio", "dep:reqwest", "dep:native-tls", "dep:tungstenite"]
ir              = []                # Backend-agnostic IR layer (experimental, opt-in)
crypto-advanced = ["dep:bcrypt", "dep:rsa"]
ffi             = ["dep:libloading"] # Native shared-library FFI (experimental, opt-in)
wasm            = ["dep:wasm-encoder", "dep:wasmparser"] # WASM binary output
wasm-exec       = ["dep:wasmtime"]                                  # WASM execution in runtime
ai-metadata     = []                # AI-aware execution context (experimental)

# Legacy aliases — kept to avoid breaking external build scripts.
zip-support  = ["stdlib-full"]
xml-support  = ["stdlib-full"]
yaml-support = ["stdlib-full"]
full-stdlib  = ["stdlib-full"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "benchmarks"
harness = false

[lib]
name = "txtcode"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]
